force-app/main/default/objects/custom_create363__c/custom_create363__c.object-meta.xml
<CustomObject>
    <label>Custom created object363</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects363</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>