force-app/main/default/objects/custom_create363__c/fields/custom_create_363field630__c.field-meta.xml
<CustomField>
    <fullName>custom_create_363field630__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 363field630</label>
    <type>Checkbox</type>
</CustomField>